# rt_wasm3

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
inc/wasm_embedded/wasm3/: api.h  core.h  gpio.h  i2c.h  internal.h  spi.h  uart.h  wasi.h
lib/: core.c  gpio.c  i2c.c  spi.c  uart.c  wasi.c
src/: gpio.rs  i2c.rs  lib.rs  spi.rs  uart.rs
