[package]
name = "wasm-embedded-rt-wasm3"
description = "Embedded WASM C/wasm3 runtime library"
repository = "https://github.com/embedded-wasm/rt_wasm3"
authors = [
  "Ryan Kurte <ryan@kurte.nz>"
]
version = "0.3.1"
edition = "2018"
license = "MPL-2.0"

# Links argument required to pass variables downstream
links = "wasme"

[features]
std = []
build-wasm3 = []
default = [ "std", "thiserror", "build-wasm3" ]

[dependencies]
cty = "0.2.2"
embedded-hal = "1.0.0-alpha.5"
log = "0.4.14"
thiserror = { version = "1.0.30", optional = true }
#wasm3-sys = { version = "*", features = [ "build-bindgen" ] }

[dependencies.wasm-embedded-spec]
version = "0.3.0"
default_features = false
features = [ "bind_c" ]

[build-dependencies]
bindgen = { version = "0.63.0", default_features = false, features=[ "runtime", "which-rustfmt" ] }
cmake = "0.1"


[dev-dependencies]
mockall = "0.11.0"

[dev-dependencies.wasm-embedded-spec]
version = "0.3.0"
default_features = false
features = [ "bind_c", "mocks", "std" ]


[patch.crates-io]
#wasm-embedded-spec = { path = "../spec" }